V.NEXT
----------
- [PATCH] Read private key before public key to avoid OS bug (#2091)
- [PATCH] Add new CryptoFactoryName and ClientException error code (#2094)
- [PATCH] also clear cached timestamp in ActiveClientBrokerCache (#2075)
- [PATCH] Fix NPE when Content-Type header is missing in HTTP response (#2079)
- [MINOR] Fix issue for MSA only where headers are not propagated on web requests with different domain redirects on newer versions of WebView (88+) (#2072)
- [PATCH] Add method to return list of broker that supports account manager (#2073)
- [MINOR] Send client id as part of request bundle for getSsoToken Api (#2064)
- [PATCH] Wire new Broker Discovery Client into MSAL - still disabled by default (#2057)
- [MINOR] Add support to run UI automation on MsalTestApp  (#2056)
- [MINOR] Move ATS span start/end to MicrosoftAuthServiceOperation (#2068)
- [MINOR] Move AT interactive span start/end to Account Chooser (#2069)
- [PATCH] Fix AbstractMethodError in makeCurrentSpan for otel (#2083)
- [MINOR] Emit number of concurrent silent requests in telemetry (#2093)
- [PATCH] Fix missing visibility of the LTW app (#2097)

V.13.0.1
----------
- [PATCH] Stop caching account manager values. Make BrokerDiscoveryClient coroutine-safe (#2050)
- [PATCH] Revert "Getting rid of account manager strategy in MSAL/OneAuth (#1988)" (#2041)
- [MINOR] Add BrokerDiscoveryClient + Tests (#2039)
- [MAJOR] Consolidate IStorageSupplier logic (#2033)
- [MINOR] Add active broker cache (#2030)
- [MAJOR] Added support for DeviceCodeFlow with device id claims. New API is only available in version 13 or higher (#2044)
- [MINOR] Replacing SHA-1 used in broker validation with SHA-512 (#2019)
- [MINOR] Removing thumbprint check from PKeyAuth challenge (#2045)
- [MINOR] Add android 14 check for skipping strong box isolation in pop token (#2053)
- [PATCH] Fix min broker protocol version value for MSA accounts in broker (#2062)